problem of z-index with the final screen animation and the pseudoelements (before, after) fixed

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     box-sizing: border-box;
 }
 
+:root {
+    --animation-duration: 5s;
+}
+
 html,
 body {
     overflow: hidden;
@@ -420,6 +424,15 @@ body {
     transform: translateX(-100vw);
 }
 
+.final-screen-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    /* background-color: #09001D; */
+    background-color: #191c31;
+}
+
 .final-screen-container {
     height: 100%;
     width: 35%;
@@ -427,13 +440,60 @@ body {
     align-items: center;
 }
 
+
+.fs-animation-container {
+    overflow: hidden;
+    border: solid 3px #fff;
+    height: 70%;
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 0;
+}
+
 .final-screen {
-    border: solid 5px #B2167F;
-    width: 100%;
-    height: 75%;
+    position: relative;
+    border: solid 3px #B2167F;
+    width: 97%;
+    height: 97%;
     display: grid;
     grid-template-rows: 20% 60% 20%;
-    background-color: #09001D;
+    background-color: #09001D ;
+    /* z-index: 10; */
+}
+
+.final-screen::before,
+.final-screen::after {
+    /* content: '';
+    position: absolute;
+    height: 400px;
+    width: 400px;
+    background-color: #B2167F;
+    transform-origin: top left;
+    top: 50%;
+    left: 50%;
+    */
+    content: '';
+    position: absolute;
+    width: 400px;
+    height: 400px;
+    background: linear-gradient(0deg, #fff, #fff);
+    transform-origin: top left;
+    top: 50%;
+    left: 50%;
+    animation: rotate var(--animation-duration) linear infinite;
+    z-index: -1;
+}
+
+.final-screen::after {
+    animation-delay: calc(var(--animation-duration) / 2 * -1);
+}
+
+@keyframes rotate {
+    100% {
+        transform: rotate(360deg);
+    }
 }
 
 .fs-title-container {
@@ -462,7 +522,7 @@ body {
 }
 
 .conic-graphic {
-    position: relative;
+    /* position: relative; */
     border: solid #fff;
     height: 100%;
     width: 50%;
@@ -476,6 +536,7 @@ body {
     align-items: center;
     transition: 1s;
     background-color: #241A36 !important;
+    transform: translateY(20%);
 }
 
 .conic-graphic::before {
@@ -494,6 +555,10 @@ body {
     font-size: 40px;
 }
 
+#assertedQuestions {
+    transition: .5s;
+}
+
 /* .conic-graphic::after {
     content: '0/10';
     position: absolute;
@@ -507,11 +572,14 @@ body {
 } */
 
 .final-phrase {
-    /* border: solid #fff; */
+    display: none;
     text-align: center;
     width: 90%;
     margin: auto;
     font-size: 18px;
+    opacity: 0;
+    transition: .8s;
+    scale: .2;
 }
 
 /* Final screen buttons */
@@ -532,7 +600,7 @@ body {
 
 .fs-button:first-child {
     background-color: #B2167F;
-    border:   #fff;
+    border: solid #fff;
     color: #fff;
     background: linear-gradient(45deg, #B2167F, #FF4500);
     /* background: linear-gradient(45deg, #B2167F, #E05A9C, #FFD700); */
